# Self_Balancing_Robot

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  compose.yaml  package.xml
config/: bridge.yaml  logger_params.yaml  observer_params.yaml  pid_params.yaml  robot_params.yaml
data/sim_2d/: guia_compendio_pid_ia_2d.html  pid_vs_pid_ai_2d.csv  pid_vs_pid_ai_2d.html  pid_vs_pid_ai_2d_animation.html
docker/: build.sh  entrypoint.sh  run-gui-linux.sh  run-gui-wsl.ps1  run-headless.sh  shell.sh
docs/: compendio_estudiantes_ejecucion_simulacion.html  compendio_estudiantes_ejecucion_simulacion.md  guia_compendio_pid_ia_2d.html  index.html  informe_educativo_pid_vs_pid_ia_2d.md  pid_vs_pid_ai_2d.html
docs/assets/: site.css  site.js
docs/exposicion/: Presentacion_PerceptIA_Robot_Autoequilibrado.pptx  README.md
launch/: sim.launch.py  sim_headless.launch.py  sim_pid.launch.py  sim_pid_headless.launch.py  sim_twip_pid.launch.py  sim_twip_pid_headless.launch.py
models/tumbller/: model.config  model.sdf
models/twip_reference/: model.config  model.sdf
scripts/: balance_controller.py  balance_csv_logger.py  balance_observer.py  create_2d_animation.py  create_2d_compendium.py  create_theoretical_pdf.py  moe_balance_controller.py  reset_simulation.py  sim_2d_pid_ai.py
worlds/: tumbller_lab.sdf  twip_reference_lab.sdf
